[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/GFX/objects/weapons/item_gun.png" type="Texture" id=1]
[ext_resource path="res://scenes/weapons/EnemyGun.gd" type="Script" id=2]
[ext_resource path="res://resources/GFX/objects/weapons/character_handRed.png" type="Texture" id=3]
[ext_resource path="res://scenes/projectiles/Laser.tscn" type="PackedScene" id=4]

[node name="EnemyGun" type="Node2D"]
z_index = 1
script = ExtResource( 2 )
projectile_scene = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 54.73, 4.389 )

[node name="character_handRed2" type="Sprite" parent="Sprite"]
position = Vector2( 69.17, 29.5384 )
texture = ExtResource( 3 )

[node name="character_handRed" type="Sprite" parent="Sprite"]
position = Vector2( 9.6737, 19.7849 )
texture = ExtResource( 3 )

[node name="ShotCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 3000, 0 )
collision_mask = 3

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="timeout" from="ShotCooldown" to="." method="_on_ShotCooldown_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
